--- a/Assets/css/Style.css
+++ b/Assets/css/Style.css
@@ -1,4 +1,3 @@
-/* ./Assets/css/Style.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -48,4 +47,21 @@ form button {
 .icon {
     width: 50px;
     height: 50px;
+}
+#searchHistory {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+.search-history-button {
+    padding: 10px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.search-history-button:hover {
+    background-color: #0056b3;
 }
